java知识 feat:多线程的线程可见性

--- a/res/框架与工作相关问题.md
+++ b/res/框架与工作相关问题.md
@@ -11,6 +11,10 @@
     > 3.其中第三层跟第四层是属于第二层语音模块的基础支持，第二层的所有模块都是继承公告基类model类，通过事件的机制进行通信，然后继承model的模块都会在初始化的时候将自身实例 添加到一个类的map集合里面，需要时会会从map集合拿到实例对象，进行功能调用。
     >
     > 4.语音流程，就是进入app后，对所有模块进行注册，然后进行注册登录，成功后，对语音功能初始化，初始化后，开始做唤醒监听，语音唤醒后 进行如设别，设别完成，进行语义解析，后端继续完成后，封装数据返回前端，前端收到数据，然后分析数据后分发给对应的业务。
+    
+  * 车悦宝
+
+    > 1、分为两块一个是音乐相关数据的展示，另外一块 音乐播放控制。
 
 * 如何封装网络 
 
