--- a/res/五、项目工程解析.md
+++ b/res/五、项目工程解析.md
@@ -2,6 +2,20 @@
 
   * 语音项目
 
+    > 
+    >
+    > 一、业务角度
+    >
+    > 1.这款app 是车载系统的语音控制软件，可以对车辆进行控制，主要的功能有对中控屏里面的导航，音乐，电台，打开关闭播放等功能 进行语音控制，还有对车身空调，车窗的打开关闭的语音控制。流程是，应用安装后，通过唤醒词 将应用启动，启动后开始进行语音识别，当说出对应的指令后，例如播放音乐，语音引擎识别正确的语义后，封装参数，然后根据参数定义类型，来区分具体的业务，例如播放音乐，主业务是 音乐，二次业务是播放，然后，我们调用音乐的api 进行音乐播放。这样就处理一次语音指令的业务。这款语音产品的意义在于，用户开车时 双手不方便操作，可以说指令对车辆进行控制。
+    >
+    > 2、语音引擎几个点，唤醒率，识别率，tts自然度。
+    >
+    > 3、语音引擎的对比：
+    >
+    > * 唤醒率:高燥-思必驰(82%)> 云之声(77%)>普强(20%)  低噪:100>95>82
+    > * 识别率:思必驰（96）>云之声（95）>普强（94）
+    > * cpu 占用：思必驰(8.71%)<云之声(13.34%)<普强(15.53%)
+    >
     > 1.采用模块化 架构，每个模块都是一个功能，根据功能不同的属性又进行分层，分为4层。
     >
     > 2.最上层是 业务(技能)模块如 导航技能、音乐技能、天气股票、车身控制、智能问答等、第二层是中间层模块，中间层模块也是分两块，一个是语音控制模块 包含 唤醒，设别，tts，语义解析，一个是对业务支持的基础功能模块，如 ui、网络、导航、日志、音乐、电台、模块。第三层是对于语音封装的组件模块，唤醒、离线识别、在线识别、tts组件、声纹组件、降噪算法组件。最后一层是对语音sdk的封装模块。
@@ -12,7 +26,7 @@
 
   * 车悦宝
 
-    > 1、分为两块一个是音乐相关数据的展示，另外一块 音乐播放控制。
+    > 1、app主要分为四个模块，第一个首页，主要是banner广告图跟歌曲界面推荐，点击后可以进入二级详情页面。第二模块是在线音乐与在线电台模块，主要是对音乐与电台资源进行分类展示。第三模块是收藏模块，主要是对收藏的音乐跟电台数据的显示，第四个模块是本地音乐，展示历史播放记录与本地sdka的音乐。
 
 * 如何封装网络 
 
