feat:简历添加手表工作经历

--- a/祝明的简历.md
+++ b/祝明的简历.md
@@ -10,7 +10,7 @@
 
 * 祝明/男/1990
 * 本科/武汉理工大学华夏学院/计算机科学与技术
-* 工作年限8年
+* 工作年限9年
 * 期望职位:android高级程序员
 * 期望薪资:面谈
 * 期望城市:深圳
@@ -25,26 +25,45 @@
 
 ##  工作经历
 
-* 深圳人马互动科技有限公司(2020年10月~至今)
+* 深圳人马互动科技有限公司(2020年10月~2024年1月)
 * 深圳弘范网络科技有限公司\北京四维智联科技有限公司(2017年3月~2020年9月)
 * 深圳北斗星航网络科技有限公司(2016年3月~2016年12月)
 * 深圳大德飞天科技有限公司(2015年3月~2016年3月)
 
 ## 项目经历
 
-### 深圳人马互动科技有限公司(2020年10月~至今)
+### 深圳人马互动科技有限公司(2020年10月~2024年1月)
+
+####  手表版晓悟故事
+
+​		齐悟手表端产品，主要用户群体在小天才、360、vivo、华为等手表智能穿戴设备上面，现已有200多w用户，日活超10w。语音类阅读类产品，主要语音互动类作品、广播剧类作品。主要工作有，对整体app主页UI改版，添加广播剧模块功能。
 
 #### 手机版互动小说
 
-#### 晓悟
+​		齐悟ToC 产品,晓悟互动小说手机版，接手该版本的迭代更新，独立开发。主要工作有，业务上多平台的广告集成、对话界面的优化、积分系统功能的开发、整体app UI视觉 优化改版。技术方面，架构由原有的mvc模式，改成mvvm模式。原耦合业务代码进行分层处理，例如广告模块，网络请求模块。
+
+#### 晓悟语音助手
+
+​	齐悟ToC 产品、晓悟语音助手，接手该版本的迭代更新，独立开发。修改主页界面，添加数据人形象。
 
 #### 鸿蒙手表互动小说
 
+​		齐悟ToC 产品，晓悟互动小说鸿蒙手表版，在手表市场总共有300多w的装机量，负责鸿蒙渠道的开发。上线半年已有10w+的装机使用量。
+
+​		使用鸿蒙开发工具进行开发。
+
 #### 云图家居语音助手
 
-#### 航盛语音助手
+​		云图家具ToB项目,语音助手，负责整体项目的开发，包含语音对家具的控制，另外包含齐悟供机票、火车票、酒店、美食的预定购买功能。语音在原有多轮会话基础上，增加全双工对话模式。		
 
+#### 航盛语音助手SDK
 
+​		航盛车载ToB项目，主要分为两个工程，语音SDK与语音演示DEMO、负责整体项目的开发。
+
+* SDK 主要包含:1、齐悟语义解析，2、各个业务的api 其中有机票、火车票、酒店、天气、景点、美食等个个业务的API. 	3、语音唤醒、语音识别、tts播报第三方资源的封装。SKD已经有多家公司接入。
+
+* 语音演示DEMO，提供给航盛进行装机演示使用，包含基础的语音交互功能，提供机票、火车票、酒店、美食的预定购买功能、天气与景点的查询功能、音频与导航的控制功能。
+  
 
 ### 北京四维智联科技有限公司(2019年1月~2020年9月)
 
