feat:添加面试内容

--- a/祝明的简历.md
+++ b/祝明的简历.md
@@ -10,7 +10,7 @@
 
 * 祝明/男/1990
 * 本科/武汉理工大学华夏学院/计算机科学与技术
-* 工作年限9年
+* 工作年限:9年
 * 期望职位:android高级程序员
 * 期望薪资:面谈
 * 期望城市:深圳
@@ -18,29 +18,39 @@
 ## 职业技能
 
 * 语言:Java、C/C++、kotlin
-* IDE：Android Studio、Intellij IDEA、Visual Studio
-* UI：屏幕适配、MaterialDesign、Animation、事件传递分发机制、Paint、Shader、Canvas的使用
-* NDK: JNI、CMake、热修复、FFmpeg音视频、socket
-* 架构: 数据库框架(LiteOrm 、GreenDao) 、网络框架(OKhttp、Retrofit) 、图片框架(Glide、Picasso、Fresco)、MVC、MVP、MVVM、AOP
+* IDE：Android Studio
+* UI：屏幕适配、Compose、Jetpack组件、MaterialDesign、Animation、事件传递分发机制、Paint、Shader、Canvas的使用。
+* NDK: JNI、CMake、FFmpeg音视频、Socket
+* 架构: 数据库框架(LiteOrm 、GreenDao) 、网络框架(OKhttp、Retrofit) 、图片框架(Glide、Picasso、Fresco)、MVC、MVP、MVVM
 
 ##  工作经历
 
-* 深圳人马互动科技有限公司(2020年10月~2024年1月)
+* 深圳悦北科技有限公司(2024年5月-2024年8月)
+* 深圳人马互动科技有限公司(2020年10月~2024年3月)
 * 深圳弘范网络科技有限公司\北京四维智联科技有限公司(2017年3月~2020年9月)
 * 深圳北斗星航网络科技有限公司(2016年3月~2016年12月)
 * 深圳大德飞天科技有限公司(2015年3月~2016年3月)
 
 ## 项目经历
 
-### 深圳人马互动科技有限公司(2020年10月~2024年1月)
+#### 深圳悦北科技有限公司(2024年5月~2024年8月)
+
+​		公司主营工具类的app，主要负责其中导航地图app的持续迭代，以及导航地图马甲包的开发，测试，上线等系列工作。
+
+### 深圳人马互动科技有限公司(2020年10月~2024年3月)
 
 ####  手表版晓悟故事
 
-​		齐悟手表端产品，主要用户群体在小天才、360、vivo、华为等手表智能穿戴设备上面，现已有200多w用户，日活超10w。语音类阅读类产品，主要语音互动类作品、广播剧类作品。主要工作有，对整体app主页UI改版，添加广播剧模块功能。
+​		齐悟手表端产品，主要用户群体在小天才、360、vivo、华为等手表智能穿戴设备上面，现已有300多w用户，日活超10w。语音类阅读类产品，主要语音互动类作品、广播剧类作品。主要工作有，对整体app主页UI改版，添加广播剧模块功能。
 
 #### 手机版互动小说
 
-​		齐悟ToC 产品,晓悟互动小说手机版，接手该版本的迭代更新，独立开发。主要工作有，业务上多平台的广告集成、对话界面的优化、积分系统功能的开发、整体app UI视觉 优化改版。技术方面，架构由原有的mvc模式，改成mvvm模式。原耦合业务代码进行分层处理，例如广告模块，网络请求模块。
+​		齐悟ToC 产品,晓悟互动小说手机版，接手该版本的迭代更新，负责主要功能开发，和开发任务分配。主要工作有：
+
+* 1、业务上多平台的广告集成、对话界面的优化、积分系统功能的开发、整体app UI视觉 优化改版。
+* 技术方面，架构由原有的mvc模式，改成mvvm模式，使用kotlin语言进行开发。原耦合业务代码进行分层处理，例如广告模块，网络请求模块。
+* 任务、卡牌、钻石系统、排行榜等功能开发
+* 闯关、pk功能开发。
 
 #### 晓悟语音助手
 
@@ -54,7 +64,7 @@
 
 #### 云图家居语音助手
 
-​		云图家具ToB项目,语音助手，负责整体项目的开发，包含语音对家具的控制，另外包含齐悟供机票、火车票、酒店、美食的预定购买功能。语音在原有多轮会话基础上，增加全双工对话模式。		
+​		云图家具ToB项目,语音助手，负责整体项目的开发和开发任务分配，包含语音对家具的控制，另外包含齐悟供机票、火车票、酒店、美食的预定购买功能。语音在原有多轮会话基础上，增加全双工对话模式。		
 
 #### 航盛语音助手SDK
 
@@ -108,7 +118,7 @@
 
 ****
 
-### 深圳北斗星航网络科技有限公司(2016年3月~2016年8月)
+### 深圳北斗星航网络科技有限公司(2016年3月~2016年12月)
 
 #### 学生手机
 
